// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon: Component should render correctly 1`] = `
<close.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`CloseIcon: Component should render with custom styles 1`] = `
<close.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
